kubernetes/apps/home/home-assistant/app/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hass-ui
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hass.toskbot.xyz`)
      kind: Rule
      services:
        - name: home-assistant
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: hass.toskbot.xyz
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hass-codeserver
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hass-code.toskbot.xyz`)
      kind: Rule
      services:
        - name: home-assistant-addon-codeserver
          port: codeserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass-codeserver-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: hass-code.toskbot.xyz
